--- a/CentOS/更新内核.md
+++ b/CentOS/更新内核.md
@@ -3,7 +3,7 @@
 
 > 安装最新内核
 ```shell
-yum --enablerepo=elrepo-kernel install kernel-ml
+yum --enablerepo=elrepo-kernel install kernel-ml kernel-ml-tools kernel-ml-tools-libs
 ```
 
 > 配置Grub2启动项
@@ -28,5 +28,5 @@ fi
 # reboot
 # step 5 clean unused kernel
 # yum list installed | grep kernel
-# yum erase kernel.x86_64
+# yum erase kernel kernel-tools kernel-tools-libs
 ```
