--- a/Kubernetes/安装.md
+++ b/Kubernetes/安装.md
@@ -9,11 +9,34 @@ gpgcheck=1
 repo_gpgcheck=1
 gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors.aliyun.com/kubernetes/yum/doc/rpm-package-key.gpg
 EOF
+yum makecache
 ```
 
 # 安装
 ```shell
+# 禁用防火墙
+systemctl stop firewalld && systemctl disable firewalld
+
+# 关闭swap
+swapoff --all
+###
+# /etc/fstab 中 注释掉 swap的挂载点
+###
+
+
+# 前置检查
+lsmod | grep br_netfilter
+###
+# 如果br_netfilter模块已加载执
+# cat << EOF >  /etc/sysctl.d/k8s.conf
+# net.bridge.bridge-nf-call-ip6tables = 1
+# net.bridge.bridge-nf-call-iptables = 1
+# EOF
+# sysctl --system
+###
+
 setenforce 0
+sed -i 's/^SELINUX=enforcing$/SELINUX=permissive/' /etc/selinux/config
 yum install -y kubelet kubeadm kubectl
 systemctl enable kubelet && systemctl start kubelet
 ```
